# robotwin-studio

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_log.txt  global.json  repo_files.txt
.agent/workflows/: git-sync.md  main_force_sync_workflow.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: idea.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.md  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  release.yml  stale.yml  unity_ci.yml
CoreSim/: CoreSim.sln
CoreSim.Tests/: CatalogTests.cs  UnitTest1.cs
FirmwareEngine/: BoardProfile.cpp  BoardProfile.h  CMakeLists.txt  CMakePresets.json  LockstepSanityTest.cpp  PipeManager.cpp  PipeManager.h  Protocol.h  RoboTwinFirmwareHost.rc  VirtualArduino.cpp  VirtualArduino.h  VirtualArduinoFirmware.rc  VirtualMcu.cpp  VirtualMcu.h  main.cpp
FirmwareEngine/Rpi/: QemuProcess.cpp  QemuProcess.h  RpiBackend.cpp  RpiBackend.h  RpiShm.cpp  RpiShm.h  RpiShmProtocol.h
FirmwareEngine/U1/: Config.h  Drivers.h  Sensors.h  U1.cpp  U1.ino  U1Globals.cpp  test_Sensors_Algo.cpp  test_Sensors_Complete.cpp
FirmwareEngine/include/: Adafruit_TCS34725.h  Arduino.h  Servo.h  Wire.h
FirmwareEngine/tests/: LockstepTimingValidation.cpp  SketchRunner.cpp
NativeEngine/: CMakeLists.txt  CMakePresets.json  Project_Manifest.json  blink_test.hex  build_debug_5.txt  build_log.txt  build_log_avr.txt
NativeEngine/include/Bridge/: UnityInterface.h
NativeEngine/include/Circuit/: AvrComponent.h  BasicComponents.h  CircuitComponent.h  Diode.h  HexLoader.h  MemoryMap.hpp
NativeEngine/include/Core/: AvrComponent.h  BasicComponents.h  BvmFormat.hpp  CircuitComponent.h  CircuitContext.h  NodalSolver.hpp
NativeEngine/include/MCU/: ATmega328P_ISA.h
NativeEngine/include/Physics/: DeterministicRng.h  MathTypes.h  PhysicsConfig.h  PhysicsWorld.h  RigidBody.h
NativeEngine/src/: NativeEngine_Core.cpp  main.cpp
NativeEngine/src/Circuit/: BvmFormat.cpp  CircuitContext.cpp  NodalSolver.cpp
NativeEngine/src/Core/: BvmFormat.cpp  CircuitContext.cpp  NodalSolver.cpp
NativeEngine/src/MCU/: ATmega328P_ISA.c
NativeEngine/src/Physics/: PhysicsWorld.cpp
NativeEngine/tests/: CMakeLists.txt  PhysicsEngineTests.cpp
Projects/: TestProject.rtwin
RobotWin/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
UnityApp/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
docs/: 3D_ASSET_LIST.md  ACTIVITY_LOG.md  ALP_ROBOT_IMPLEMENTATION_PLAN.md  ALP_SIM_REQUIREMENTS.md  ARCHITECTURE.md  ARCHITECTURE_NATIVE.md  BINARY_AUDIT_REPORT.md  BUILD_RELEASE.md  COMPLETE_OPTIMIZATION_REPORT.md  CORE_SIM.md  DEBUG_CONSOLE.md  DEV_LOG_MISSION_CONTROL.md  DEV_SETUP_WINDOWS.md  EDITOR_COMPLETION_REPORT.md  FINAL_VALIDATION_REPORT.md  FIRMWARE_ENGINE.md  FIRMWARE_HELP_FIX.md  GLOBAL_LATENCY_SYNC.md  HARDWARE_SIMULATION_ARCHITECTURE.md  HIGH_FIDELITY_PLAN.md  MEGA_PIN_MAP_PLAN.md  MODEL_POLICY.md  MVP_SCOPE.md  NATIVE_ENGINE.md  OPTIMIZATION_PLAN.md  PERFORMANCE_TESTING.md  PLAYGROUND_MODE.md  PROJECT_STRUCTURE.md  RASPBERRY_PI_PLAN.md  README.md  REALTIME_BUDGETS.md  REALTIME_CONTRACT.md  REALTIME_DESIGN.md  RENDER_OPTIMIZATION_REPORT.md  ROBOTWIN_UNITY.md  SENSOR_VISUALIZATION_REPORT.md  SETUP_WINDOWS.md  SYSTEM_OPTIMIZATION_REPORT.md  TESTING.md  TEST_INSTRUMENTS_SPEC.md  (+14 more)
docs/U1/: AFMotor.h  Adafruit_TCS34725.h  Config.h  LOGIC.md  Sensors.h  U1.ino
docs/antigravity/: ACTIVITY_LOG.md  CONTEXT_PACK.md  LAST_RUN.md  MASTER_PROMPT.txt  MODEL_POLICY.md  MVP_SCOPE.md  PROFILES.yml  SHARED_INFO_LATEST.json  SHARED_INFO_LATEST_SUMMARY.md  SHARED_INFO_PIPELINE.md
tests/integration/: UnityBridge.js  package-lock.json  package.json  reporter.js  test-report.html
tests/native/: ArduinoMock.h  CMakeLists.txt  FirmwareIntegrationTest.cpp  PhysicsDeepValidation.cpp  PhysicsEngineTests.cpp  SensorEdgeCaseTests.cpp  SensorInternalValidation.cpp  VerifyAlgorithms.ps1
tests/python/: test_remote_server.py
tools/: autonomous_fix_loop.py  autonomous_fixer.py  autonomous_iteration.py  build_firmware.ps1  build_windows_standalone.ps1  codex_support_loop.ps1  doctor.py  end_session_shared_info.ps1  export_context_pack.ps1  export_context_pack_min.ps1  fetch_icons.py  fetch_png_icons.py  final_circuit_fixer.py  fix_svg_colors.py  forensic_doctor.py  get_latest_shared_info.ps1  launch_mission_control.ps1  monitor_and_drive.py  monitor_unity.py  polyglot_builder.py  python_console.py  rt_tool.py  run_full_cycle.py  run_qa.ps1  run_self_test.py  run_unity_smoke.ps1  touch_icons.ps1  update_repo_files.ps1  update_unity_plugins.ps1  update_workspace_snapshot.ps1  validate_uxml.ps1  verify_assets.ps1  verify_runtime.py
tools/GoldenTraceRecorder/: Program.cs
tools/RobotWinFirmwareMonitor/: MainForm.cs  Program.cs  README.md  app.manifest
tools/RpiSmokeTest/: Program.cs
tools/context/: end_session_shared_info.ps1  export_context_pack.ps1  export_context_pack_min.ps1  get_latest_shared_info.ps1
tools/dashboard/: package-lock.json  server.js
tools/debug_console/: launch_debug_console.ps1  server.py
tools/fixtures/: firmware_minimal.bvm  hf06_sample.rtcomp
tools/issue_bodies/: done_2026-01-05_closeout.md  unity_template_plugin_collisions.md
tools/rpi/: rpi_host.py  rpi_shm.py  rpi_smoke_test.py
tools/scripts/: audit_build_outputs.py  audit_runtime_apis.py  blender_obj_to_fbx.py  blender_step_to_fbx.py  blender_to_glb.py  build_bvm.py  build_firmware.ps1  build_firmware_monitor.ps1  build_native.ps1  build_rtcomp_from_components.py  build_template_bvms.ps1  build_windows_standalone.ps1  create_q0_issues.ps1  generate_mapping.py  install_com0com_ports.ps1  migrate_template_specs.py  record_golden_trace.ps1  rpi_smoke_test.ps1  run_qa.ps1  run_unity_smoke.ps1  step_to_glb.py  stop_debug_console.ps1  touch_icons.ps1  update_repo_files.ps1  update_repo_snapshot.ps1  update_unity_plugins.ps1  (+4 more)
(+527 files in other folders)
